--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,12 @@
 }
 .lightMode{
     color:black;
-    background: rgb(75,122,254);
-background: linear-gradient(130deg, rgba(75,122,254,1) 0%, rgba(98,176,200,1) 0%, rgba(255,255,255,1) 100%);
+    background-image: url(images/lightBckground.svg);
 }
 .darkMode{
     color:whitesmoke;
     background: rgb(0,0,0);
-    background: linear-gradient(130deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 0%, rgba(0,10,92,1) 100%);
+    background-image: url(images/darkBckground.svg);
 }
 header{
     margin-left: 5px;
